--- a/.github/workflows/pushlish.yml
+++ b/.github/workflows/pushlish.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm run build
         
     - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@main
+      uses: JamesIves/github-pages-deploy-action@master
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: gh-pages
