--- a/.github/workflows/pushlish.yml
+++ b/.github/workflows/pushlish.yml
@@ -27,6 +27,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@master
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: gh-pages
+        BRANCH: main
         FOLDER: build
         SOURCE: dist
