--- a/.github/workflows/pushlish.yml
+++ b/.github/workflows/pushlish.yml
@@ -28,4 +28,4 @@ jobs:
       with:
         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         BRANCH: main
-        FOLDER: dist
+        SOURCE: dist
